# MCP-SERVER

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  server.py
.github/workflows/: tests.yml
debug_companion/: config.py  context_tools.py  gemini_client.py  orchestrator.py  path_safety.py  pytest_runner.py
demo_project/: calc.py  test_calc.py
tests/: test_debug_project.py  test_extract_and_context.py  test_run_pytest.py  test_safe_path.py
