[project]
name = "debug-companion-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov",
    "google-generativeai>=0.8.6",
    "mcp>=1.25.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]